<resources>
    <string name="app_name">AiLaTrieuPhu</string>
    <string name="q1">1 - $ 200</string>
    <string name="q2">2 - $ 400</string>
    <string name="q3">3 - $ 600</string>
    <string name="q4">4 - $ 800</string>
    <string name="q5">5 - $ 1.000</string>
    <string name="q6">6 - $ 2.000</string>
    <string name="q7">7 - $ 4.000</string>
    <string name="q8">8 - $ 6.000</string>
    <string name="q9">9 - $ 8.000</string>
    <string name="q10">10 - $ 10.000</string>
    <string name="q11">11 - $ 20.000</string>
    <string name="q12">12 - $ 40.000</string>
    <string name="q13">13 - $ 60.000</string>
    <string name="q14">14 - $ 85.000</string>
    <string name="q15">15 - $ 150.000</string>
</resources>
