<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_money"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/money15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/animation_money"
            android:gravity="center"
            android:text="@string/q15"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_1"
            android:gravity="center"
            android:text="@string/q14"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_1"
            android:gravity="center"
            android:text="@string/q13"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_1"
            android:gravity="center"
            android:text="@string/q12"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_1"
            android:gravity="center"
            android:text="@string/q11"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/animation_money"
            android:gravity="center"
            android:text="@string/q10"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_1"
            android:gravity="center"
            android:text="@string/q9"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_1"
            android:gravity="center"
            android:text="@string/q8"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_1"
            android:gravity="center"
            android:text="@string/q7"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_1"
            android:gravity="center"
            android:text="@string/q6"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q5"
            android:background="@drawable/animation_money"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_1"
            android:gravity="center"
            android:text="@string/q4"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_1"
            android:gravity="center"
            android:text="@string/q3"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_1"
            android:gravity="center"
            android:text="@string/q2"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/money1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/money_1"
            android:gravity="center"
            android:text="@string/q1"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutQuestion"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="330dp"
            android:layout_height="200dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/bg_question"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtLevel"
            android:layout_width="200dp"
            android:layout_height="46dp"
            android:background="@drawable/level"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="Câu 1"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_below="@id/txtQuestion"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtAnswerA"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@drawable/answer_4"/>
            <TextView
                android:id="@+id/txtAnswerB"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@drawable/answer_4"/>
            <TextView
                android:id="@+id/txtAnswerC"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@drawable/answer_4"/>
            <TextView
                android:id="@+id/txtAnswerD"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@drawable/answer_4"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>